k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deno-fresh-example
  labels:
    name: deno-fresh-example
---
