k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: deno-fresh-example
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
